--- a/main.html
+++ b/main.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>경일아카데미</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>경일게임아카데미</title>
     <link rel="stylesheet" href="./main.css">
-    
 </head>
 <body>
     <div id="wrap">
@@ -27,5 +26,6 @@
             </div>
         </div>
     </div>
+    
 </body>
 </html>
